recursion.logo.square.FourSquare.scala.error
Compilation error:
FourSquare:9: error: ')' expected but '}' found.
}
^